      \code{diagram()} causes the main diagram to be overlaid on the fields of
      water stability (white) and instability (gray). Change this to
      \code{TRUE} to obtain the previous default of masking all parts of the
      diagram oustide of the water stability field.

    }
  }

  \subsection{NEW FEATURES}{
    \itemize{

      \item Add function \strong{combine()} for combining diagrams for different
      systems (i.e., simple overlay with labels for species from both systems).

      \item Add function \strong{duplex()} for making a new diagram by secondary
      balancing between two systems.

      \item Add a \strong{predominant} argument to \code{mosaic()} to use
      previously calculated predominances of species (e.g. minerals) for the
      changing basis species. This allows \code{mosaic()} calculations to be
      linked in series, for instance to sequentially add metals (Fe, then Cu)
      to a diagram.

      \item Add vignette \strong{multi-metal.Rmd} for examples that use these
      new features to make diagrams for minerals with multiple metals
      (specifically Fe and Cu).

    }
  }

  \subsection{CHANGES TO OBIGT DATABASE}{
    \itemize{

      \item Update species parameters for the 2019 Deep Earth Water (DEW)
      model.

      \item \samp{OBIGT/SUPCRT92.csv}: Change lowercase to uppercase "A"
      (Angstrom) in names of minerals with suffixes indicating interlayer
      spacing (amesite, clinochlore, cronstedtite, daphnite).

      \item \samp{OBIGT/inorganic_aq.csv}: Update arsenopyrite with data from
      Naumov et al., 1974 (via Unitherm).

      \item \samp{OBIGT/inorganic_cr.csv}: Correct syntax for number of \H2O in
      formulas of some As-bearing minerals.

      \item Install bibtex file (\samp{docs/OBIGT.bib}) for use in the
      \pkg{logKcalc} package (\url{https://github.com/jedick/logKcalc}).

      \item Use uncompressed data files (i.e. \samp{.csv}, not \samp{.csv.xz})